--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
   <div class="app">
     <ul class="ul">
       <li>
+        <a href="./0712/" target="_blank">年中盘点H5</a>
+      </li>
+      <li>
         <a href="./0526/" target="_blank">移动引导页</a>
       </li>
     </ul>
