git log 查看 commit日志 :alien:

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 <body>
   <div class="app">
     <ul class="ul">
+        <li>
+            <a href="./0831/" target="_blank">中秋节</a>
+          </li>
       <li>
         <a href="./0712/" target="_blank">年中盘点H5</a>
       </li>
